# cmake-test

./: .gitignore  CMakeLists.txt  configure.sh
include/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
